[package]
name = "silent-threshold-encryption"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-std = { version = "0.5.0", features = ["print-trace"] }
ark-ec = { version = "0.5.0" }
ark-ff = { version = "0.5.0" }
ark-poly = { version = "0.5.0" }
ark-bls12-381 = { version = "0.5.0" }
ark-serialize = { version = "0.5.0" }
blake2 = { version = "0.10", features = ["std"] }
rand = { version = "0.9.0" }
zeroize = { version = "1.7", features = ["zeroize_derive"] }
thiserror = { version = "2.0" }

rayon = { version = "1.5.1" }

# Optional dependencies for distributed examples
tokio = { version = "1.40", features = ["full"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
bincode = { version = "1.3", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
rustls = { version = "0.23", optional = true, features = ["ring"] }
tokio-rustls = { version = "0.26", optional = true }
rustls-pemfile = { version = "2.1", optional = true }
rcgen = { version = "0.13", optional = true }
libp2p = { version = "0.54", default-features = false, features = ["tcp", "tls", "noise", "gossipsub", "macros", "mdns", "identify", "ping", "dns", "tokio", "yamux"] , optional = true }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
hex = "0.4"

[features]
asm = ["ark-ff/asm"]
parallel = ["ark-std/parallel", "ark-ec/parallel", "ark-ff/parallel", "ark-poly/parallel"]
distributed = ["tokio", "serde", "bincode", "clap", "rustls", "tokio-rustls", "rustls-pemfile", "rcgen", "libp2p"]
default = []

[profile.dev]
opt-level = 3

[dev-dependencies]
criterion = { version = "0.5.0", features = ["html_reports"] }

[[bench]]
name = "encryption"
harness = false

[[bench]]
name = "decryption"
harness = false

[[bench]]
name = "interpolation"
harness = false

[[bench]]
name = "setup"
harness = false

[[bin]]
name = "distributed_protocol"
path = "src/bin/distributed_protocol.rs"
required-features = ["distributed"]

[[bin]]
name = "p2p_peer"
path = "src/bin/p2p_peer.rs"
required-features = ["distributed"]

[[bin]]
name = "generate_peer_params"
path = "src/bin/generate_peer_params.rs"
required-features = ["distributed"]
