[package]
name = "ste-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ste-client"
path = "src/main.rs"

[dependencies]
silent-threshold-encryption = { path = ".." }
ark-std = { version = "0.5.0", features = ["print-trace"] }
ark-ec = { version = "0.5.0" }
ark-ff = { version = "0.5.0" }
ark-poly = { version = "0.5.0" }
ark-bls12-381 = { version = "0.5.0" }
ark-serialize = { version = "0.5.0" }
rand = { version = "0.9.0" }
rayon = { version = "1.5.1" }
hex = "0.4"
getrandom = "0.3"

