[package]
name = "silent-threshold-encryption-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
silent-threshold-encryption = { path = ".." }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
js-sys = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1"

# Arkworks dependencies
ark-std = { version = "0.5.0", default-features = false }
ark-ec = { version = "0.5.0", default-features = false }
ark-ff = { version = "0.5.0", default-features = false }
ark-poly = { version = "0.5.0", default-features = false }
ark-bls12-381 = { version = "0.5.0", default-features = false, features = ["curve"] }
ark-serialize = { version = "0.5.0", default-features = false }
rand = { version = "0.9.0", default-features = false }
blake2 = { version = "0.10", default-features = false }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Performance",
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "BinaryType",
]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations

[profile.dev]
opt-level = 2       # Some optimization for faster development builds
